--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -17,6 +17,7 @@
 	<link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" rel="stylesheet" type="text/css" />
 	<link href="assets/plugins/boostrap-slider/css/slider.css" rel="stylesheet" type="text/css">
+	<link href="assets/plugins/bootstrap-tag/bootstrap-tagsinput.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/animate.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/mashmenu.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/jquery.minicolors.css" rel="stylesheet" type="text/css"/>
@@ -63,6 +64,7 @@
 		<script type="text/javascript" src="assets/js/row-link.js"></script>
 		<script src="assets/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js" type="text/javascript"></script>
 		<script src="assets/plugins/boostrap-slider/js/bootstrap-slider.js" type="text/javascript"></script>
+		<script src="assets/plugins/bootstrap-tag/bootstrap-tagsinput.min.js" type="text/javascript"></script>
 
 	<!-- END NEED TO WORK ON -->
 
@@ -686,6 +688,10 @@
 									<button type="button" class="btn btn-danger btn-small">Delete</button>
 								</div>
 
+								<div class="form-group">
+									<div class=""> <input type="text" data-role="tagsinput" placeholder="Type Answer and press Enter" /></div>
+								</div>
+
 			               	</div>
 			              </div>
 			            </div>
@@ -700,176 +706,6 @@
 </div>
 <!-- END CONTENT --> 
 
-<!-- BEGIN CHAT --> 
-<div id="sidr" class="chat-window-wrapper">
-	<div id="main-chat-wrapper">
-		<div class="chat-window-wrapper fadeIn" id="chat-users">
-			<!-- BEGIN CHAT HEADER -->
-			<div class="chat-header">	
-				<!-- BEGIN CHAT SEARCH BAR -->
-				<div class="pull-left">
-					<input type="text" placeholder="search">
-				</div>
-				<!-- END CHAT SEARCH BAR -->
-				<!-- BEGIN CHAT QUICKLINKS -->		
-				<div class="pull-right">
-					<a href="#" class=""><div class="iconset top-settings-dark"></div></a>
-				</div>
-				<!-- END CHAT QUICKLINKS -->			
-			</div>
-			<!-- END CHAT HEADER -->	
-			<!-- BEGIN GROUP WIDGET -->
-			<div class="side-widget">
-				<div class="side-widget-title">group chats</div>
-				<div class="side-widget-content">
-					<div id="groups-list">
-						<ul class="groups">
-							<li><a href="#"><div class="status-icon green"></div>Group Chat 1</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<!-- END GROUP WIDGET -->
-			<!-- BEGIN FAVORITES WIDGET -->
-			<div class="side-widget fadeIn">
-				<div class="side-widget-title">favorites</div>
-				<div class="side-widget-content">
-					<!-- BEGIN SAMPLE CHAT -->
-					<div class="user-details-wrapper active" data-chat-status="online" data-chat-user-pic="assets/img/profiles/d.jpg" data-chat-user-pic-retina="assets/img/profiles/d2x.jpg" data-user-name="Jane Smith">
-						<!-- BEGIN PROFILE PIC -->
-						<div class="user-profile">
-								<img src="assets/img/profiles/d.jpg" alt="" data-src="assets/img/profiles/d.jpg" data-src-retina="assets/img/profiles/d2x.jpg" width="35" height="35">
-							</div>
-						<!-- END PROFILE PIC -->
-						<!-- BEGIN MESSAGE -->
-						<div class="user-details">
-								<div class="user-name">Jane Smith</div>
-								<div class="user-more">Message...</div>
-							</div>
-						<!-- END MESSAGE -->
-						<!-- BEGIN MESSAGES BADGE -->
-						<div class="user-details-status-wrapper">
-								<span class="badge badge-important">3</span>
-							</div>
-						<!-- END MESSAGES BADGE -->
-						<!-- BEGIN STATUS -->
-						<div class="user-details-count-wrapper">
-								<div class="status-icon green"></div>
-							</div>
-						<!-- END STATUS -->
-						<div class="clearfix"></div>
-					</div>
-					<!-- END SAMPLE CHAT -->	
-				</div>
-			</div>
-			<!-- END FAVORITES WIDGET -->
-			<!-- BEGIN MORE FRIENDS WIDGET -->
-			<div class="side-widget">
-				<div class="side-widget-title">more friends</div>
-				<div class="side-widget-content" id="friends-list">
-					<!-- BEGIN SAMPLE CHAT -->
-					<div class="user-details-wrapper" data-chat-status="online" data-chat-user-pic="assets/img/profiles/d.jpg" data-chat-user-pic-retina="assets/img/profiles/d2x.jpg" data-user-name="Jane Smith">
-						<!-- BEGIN PROFILE PIC -->
-						<div class="user-profile">
-							<img src="assets/img/profiles/d.jpg" alt="" data-src="assets/img/profiles/d.jpg" data-src-retina="assets/img/profiles/d2x.jpg" width="35" height="35">
-						</div>
-						<!-- END PROFILE PIC -->
-						<!-- BEGIN MESSAGE -->
-						<div class="user-details">
-							<div class="user-name">Jane Smith</div>
-							<div class="user-more">Message...</div>
-						</div>
-						<!-- END MESSAGE -->
-						<!-- BEGIN MESSAGES BADGE -->
-						<div class="user-details-status-wrapper">
-							<span class="badge badge-important">3</span>
-						</div>
-						<!-- END MESSAGES BADGE -->
-						<!-- BEGIN STATUS -->
-						<div class="user-details-count-wrapper">
-							<div class="status-icon green"></div>
-						</div>
-						<!-- END STATUS -->
-						<div class="clearfix"></div>
-					</div>
-					<!-- END SAMPLE CHAT -->
-				</div>		
-			</div>
-			<!-- END MORE FRIENDS WIDGET -->
-		</div>		
-		<!-- BEGIN DUMMY CHAT CONVERSATION -->
-		<div class="chat-window-wrapper fadeIn" id="messages-wrapper" style="display:none">
-			<!-- BEGIN CHAT HEADER BAR -->
-			<div class="chat-header">	
-				<!-- BEGIN SEARCH BAR -->
-				<div class="pull-left">
-					<input type="text" placeholder="search">
-				</div>		
-				<!-- END SEARCH BAR -->
-				<!-- BEGIN CLOSE TOGGLE -->
-				<div class="pull-right">
-					<a href="#" class=""><div class="iconset top-settings-dark"></div></a>
-				</div>	
-				<!-- END CLOSE TOGGLE -->				
-			</div>
-			<div class="clearfix"></div>
-			<!-- END CHAT HEADER BAR -->
-			<!-- BEGIN CHAT BODY -->
-			<div class="chat-messages-header">
-				<div class="status online"></div>
-				<span class="semi-bold">Jane Smith(Typing..)</span>
-				<a href="#" class="chat-back"><i class="icon-custom-cross"></i></a>
-			</div>
-			<!-- BEGIN CHAT MESSAGES CONTAINER -->
-			<div class="chat-messages">
-				<!-- BEGIN TIME STAMP EXAMPLE -->
-				<div class="sent_time">Yesterday 11:25pm</div>
-				<!-- END TIME STAMP EXAMPLE -->
-				<!-- BEGIN EXAMPLE CHAT MESSAGE -->
-				<div class="user-details-wrapper">
-					<!-- BEGIN MESSENGER PROFILE -->
-					<div class="user-profile">
-						<img src="assets/img/profiles/d.jpg" alt="" data-src="assets/img/profiles/d.jpg" data-src-retina="assets/img/profiles/d2x.jpg" width="35" height="35">
-					</div>
-					<!-- END MESSENGER PROFILE -->
-					<!-- BEGIN MESSENGER MESSAGE -->
-					<div class="user-details">
-						<div class="bubble">Hello, You there?</div>
-					</div>
-					<!-- END MESSENGER MESSAGE -->					
-					<div class="clearfix"></div>
-					<!-- BEGIN TIMESTAMP ON CLICK TOGGLE -->
-					<div class="sent_time off">Yesterday 11:25pm</div>
-					<!-- END TIMESTAMP ON CLICK TOGGLE -->
-				</div>
-				<!-- END EXAMPLE CHAT MESSAGE -->
-				<!-- BEGIN TIME STAMP EXAMPLE -->
-				<div class="sent_time">Today 11:25pm</div>
-				<!-- BEGIN TIME STAMP EXAMPLE -->				
-				<!-- BEGIN EXAMPLE CHAT MESSAGE (FROM SELF) -->
-				<div class="user-details-wrapper pull-right">
-					<!-- BEGIN MESSENGER MESSAGE -->
-					<div class="user-details">
-						<div class="bubble sender">Let me know when you free</div>
-					</div>					
-					<!-- END MESSENGER MESSAGE -->
-					<div class="clearfix"></div>
-					<!-- BEGIN TIMESTAMP ON CLICK TOGGLE -->
-					<div class="sent_time off">Sent On Tue, 2:45pm</div>
-					<!-- END TIMESTAMP ON CLICK TOGGLE -->
-				</div>	
-				<!-- END EXAMPLE CHAT MESSAGE (FROM SELF) -->	
-			</div>
-			<!-- END CHAT MESSAGES CONTAINER -->
-		</div>
-		<div class="chat-input-wrapper" style="display:none">
-			<textarea id="chat-message-input" rows="1" placeholder="Type your message"></textarea>
-		</div>
-		<div class="clearfix"></div>
-		<!-- END DUMMY CHAT CONVERSATION -->
-	</div>
-</div>
-<!-- END CHAT --> 
 </body>
 <script>
 	$('.fontSize').slider();
