--- a/HTML/teacher-modules.html
+++ b/HTML/teacher-modules.html
@@ -23,10 +23,9 @@
 	<link href="assets/css/custom-icon-set.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/plugins/bootstrap-datepicker/css/datepicker.css" rel="stylesheet" type="text/css">
 	<link href="assets/plugins/bootstrap-timepicker/css/bootstrap-timepicker.css" rel="stylesheet" type="text/css">
-	<link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
-
 	<link href="assets/plugins/jquery-datatable/css/jquery.dataTables.css" rel="stylesheet" type="text/css">
 	<link href="assets/plugins/datatables-responsive/css/datatables.responsive.css" rel="stylesheet" type="text/css" media="screen">
+	<link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
 
 
 	<!-- BEGIN CORE JS FRAMEWORK--> 
@@ -349,30 +348,22 @@
 					                  <tr >
 					                    <td class="v-align-middle"><a href="#"></a>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</td>
 					                    <td class="v-align-middle"><span class="muted">20 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span> <button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i> Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span> <button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i> Replay</button><div class="alert alert-success inline pull-right m-b-0 m-r-10 dateInfo"> 3rd Jan 2014</div></td>
 					                  </tr>
 					                  <tr>
 					                    <td class="v-align-middle">es, but also the leap into electronic typesetting, remaining essentially unchanged. It was popul</td>
 					                    <td><span class="muted">35 mins</span></td>
-					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button>
-					                    <div class="popover-markup">
-										  <div class="head hide">
-										    Schedule
-										   </div>
-										  <div class="content hide">
-										    
-										  </div>
-										</div></td>
+					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,</td>
 					                    <td class="v-align-middle"><span class="muted">15 mins</span></td>
-					                    <td><span class="muted"><span class="label label-important">Not Started</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-play"></i> Start</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
+					                    <td><span class="muted"><span class="label label-important">Not Started</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-play"></i> Start</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> 6th Mar 2014</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it </td>
 					                    <td class="v-align-middle"><span class="muted">35 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button><div class="alert alert-success inline pull-right m-b-0 m-r-10 dateInfo"> 18th Jan 2014</div></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up </td>
@@ -382,12 +373,12 @@
 					                  <tr>
 					                    <td>The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</td>
 					                    <td class="v-align-middle"><span class="muted">16 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button><div class="alert alert-success inline pull-right m-b-0 m-r-10 dateInfo"> 12th Jan 2014</div></td>
 					                  </tr>
 					                  <tr>
 					                    <td>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus</td>
 					                    <td class="v-align-middle"><span class="muted">14 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button><div class="alert alert-success inline pull-right m-b-0 m-r-10 dateInfo"> 31st Dec 2013</div></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in</td>
@@ -402,12 +393,12 @@
 					                  <tr>
 					                    <td>Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in</td>
 					                    <td class="v-align-middle"><span class="muted">15 mins</span></td>
-					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
+					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> 8th Feb 2014</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Many desktop publishing packages and web page editors now use Lorem</td>
 					                    <td class="v-align-middle"><span class="muted">12 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><div class="alert inline m-b-0 m-l-20 m-r-20 p-t-5 p-b-5"> 5th Jan 2014</div><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button><div class="alert alert-success inline pull-right m-b-0 m-r-10 dateInfo"> 5th Jan 2014</div></td>
 					                  </tr>
 					                </tbody>
 					              </table>
@@ -436,6 +427,7 @@
 			<input type="text" placeholder="Select Date" class="span12">
 			<span class="add-on"><span class="arrow"></span><i class="fa fa-calendar"></i></span> 
 		</div>
+		<button type="button" class="btn btn-primary">Save</button>
       </div>
     </div>
   </div>
